<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/m_16"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner_button"
        android:padding="@dimen/m_16"
        android:text="@string/action_send"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rel_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_asset_name">

        <ProgressBar
            android:id="@+id/prb_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/txt_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lbl_no_data" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_assets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/m_16" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_sensor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/m_16" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_asset_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m_16"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone" />
</RelativeLayout>
