<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/card_parent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/m_10" android:elevation="@dimen/m_10" app:cardCornerRadius="@dimen/m_16">
    <LinearLayout android:orientation="vertical" android:id="@+id/lin_parent" android:background="#4895d3" android:padding="@dimen/m_10" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/m_5" android:layout_weight="0.5">
            <TextView android:textSize="@dimen/s_70" android:textStyle="bold" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@+id/txt_temperature" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0° C"/>
            <TextView android:textSize="@dimen/s_18" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/txt_sensor_id" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:textSize="@dimen/s_12" android:textColor="@color/red" android:layout_gravity="center_horizontal" android:id="@+id/txt_sensor_status" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/m_5" android:text="@string/lbl_alarm_levels"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:padding="@dimen/m_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/m_5" android:text="@string/lbl_low"/>
            <TextView android:textSize="@dimen/s_18" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/txt_alarm_low" android:background="@drawable/round_corner_white_text" android:padding="@dimen/m_5" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/m_5" android:layout_marginBottom="@dimen/m_5" android:text="1" android:layout_weight="1" android:layout_marginStart="@dimen/m_10" android:layout_marginEnd="@dimen/m_10"/>
            <TextView android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/txt_lbl_alarm_high" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/m_5" android:text="@string/lbl_High" android:layout_marginStart="@dimen/m_5"/>
            <TextView android:textSize="@dimen/s_16" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/txt_alarm_high" android:background="@drawable/round_corner_white_text" android:padding="@dimen/m_5" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/m_5" android:layout_marginBottom="@dimen/m_5" android:text="1" android:layout_weight="1" android:layout_marginStart="@dimen/m_10" android:layout_marginEnd="@dimen/m_10"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
